3.4.3/_sources/gallery/shapes_and_collections/arrow_guide.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/shapes_and_collections/arrow_guide.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_shapes_and_collections_arrow_guide.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_shapes_and_collections_arrow_guide.py:


===========
Arrow guide
===========

Adding arrow patches to plots.

Arrows are often used to annotate plots. This tutorial shows how to plot arrows
that behave differently when the data limits on a plot are changed. In general,
points on a plot can either be fixed in "data space" or "display space".
Something plotted in data space moves when the data limits are altered - an
example would be the points in a scatter plot. Something plotted in display
space stays static when data limits are altered - an example would be a
figure title or the axis labels.

Arrows consist of a head (and possibly a tail) and a stem drawn between a
start point and end point, called 'anchor points' from now on.
Here we show three use cases for plotting arrows, depending on whether the
head or anchor points need to be fixed in data or display space:

1. Head shape fixed in display space, anchor points fixed in data space
2. Head shape and anchor points fixed in display space
3. Entire patch fixed in data space

Below each use case is presented in turn.

.. GENERATED FROM PYTHON SOURCE LINES 27-37

.. code-block:: default

    import matplotlib.patches as mpatches
    import matplotlib.pyplot as plt
    x_tail = 0.1
    y_tail = 0.1
    x_head = 0.9
    y_head = 0.9
    dx = x_head - x_tail
    dy = y_head - y_tail









.. GENERATED FROM PYTHON SOURCE LINES 38-48

Head shape fixed in display space and anchor points fixed in data space
-----------------------------------------------------------------------

This is useful if you are annotating a plot, and don't want the arrow to
to change shape or position if you pan or scale the plot.

In this case we use `.patches.FancyArrowPatch`.

Note that when the axis limits are changed, the arrow shape stays the same,
but the anchor points move.

.. GENERATED FROM PYTHON SOURCE LINES 48-60

.. code-block:: default


    fig, axs = plt.subplots(nrows=2)
    arrow = mpatches.FancyArrowPatch((x_tail, y_tail), (x_head, y_head),
                                     mutation_scale=100)
    axs[0].add_patch(arrow)

    arrow = mpatches.FancyArrowPatch((x_tail, y_tail), (x_head, y_head),
                                     mutation_scale=100)
    axs[1].add_patch(arrow)
    axs[1].set_xlim(0, 2)
    axs[1].set_ylim(0, 2)




.. image:: /gallery/shapes_and_collections/images/sphx_glr_arrow_guide_001.png
    :alt: arrow guide
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    (0.0, 2.0)



.. GENERATED FROM PYTHON SOURCE LINES 61-73

Head shape and anchor points fixed in display space
---------------------------------------------------

This is useful if you are annotating a plot, and don't want the arrow to
change shape or position if you pan or scale the plot.

In this case we use `.patches.FancyArrowPatch`, and pass the keyword argument
``transform=ax.transAxes`` where ``ax`` is the axes we are adding the patch
to.

Note that when the axis limits are changed, the arrow shape and location
stay the same.

.. GENERATED FROM PYTHON SOURCE LINES 73-88

.. code-block:: default


    fig, axs = plt.subplots(nrows=2)
    arrow = mpatches.FancyArrowPatch((x_tail, y_tail), (x_head, y_head),
                                     mutation_scale=100,
                                     transform=axs[0].transAxes)
    axs[0].add_patch(arrow)

    arrow = mpatches.FancyArrowPatch((x_tail, y_tail), (x_head, y_head),
                                     mutation_scale=100,
                                     transform=axs[1].transAxes)
    axs[1].add_patch(arrow)
    axs[1].set_xlim(0, 2)
    axs[1].set_ylim(0, 2)





.. image:: /gallery/shapes_and_collections/images/sphx_glr_arrow_guide_002.png
    :alt: arrow guide
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    (0.0, 2.0)



.. GENERATED FROM PYTHON SOURCE LINES 89-96

Head shape and anchor points fixed in data space
------------------------------------------------

In this case we use `.patches.Arrow`.

Note that when the axis limits are changed, the arrow shape and location
change.

.. GENERATED FROM PYTHON SOURCE LINES 96-107

.. code-block:: default


    fig, axs = plt.subplots(nrows=2)

    arrow = mpatches.Arrow(x_tail, y_tail, dx, dy)
    axs[0].add_patch(arrow)

    arrow = mpatches.Arrow(x_tail, y_tail, dx, dy)
    axs[1].add_patch(arrow)
    axs[1].set_xlim(0, 2)
    axs[1].set_ylim(0, 2)




.. image:: /gallery/shapes_and_collections/images/sphx_glr_arrow_guide_003.png
    :alt: arrow guide
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    (0.0, 2.0)



.. GENERATED FROM PYTHON SOURCE LINES 108-110

.. code-block:: default


    plt.show()








.. _sphx_glr_download_gallery_shapes_and_collections_arrow_guide.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: arrow_guide.py <arrow_guide.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: arrow_guide.ipynb <arrow_guide.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
